--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context=".signup.MainActivity"
     android:background="@drawable/splash_background">
 
     <ImageView
@@ -14,7 +14,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         android:id="@+id/logo"
-
         android:background="@drawable/ic_logo"
         android:backgroundTint="@color/white"
         app:layout_constraintVertical_bias="0.38"
