--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -42,11 +42,12 @@
         app:layout_constraintBottom_toTopOf="@id/bottomImg"
         app:layout_constraintVertical_bias="0.4"
         app:cardElevation="5dp"
+        android:id="@+id/googleLoginBtn"
         app:cardCornerRadius="5dp">
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:id="@+id/googleLoginBtn">
+           >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
