--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,11 @@
         <item name="android:statusBarColor" tools:targetApi="l">#293D58</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
+    <item name="android:textSize">16sp</item>
+    <item name="android:textColorHint">#A1B1BD</item>
+    <item name="android:editTextColor">#A1B1BD</item>
+        <item name="colorAccent">#A1B1BD</item>
+    </style>
 </resources>
