--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -24,13 +24,7 @@
            app:layout_constraintHeight_percent="0.2"
            android:id="@+id/view1"/>
 
-        <androidx.constraintlayout.widget.Barrier
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:constraint_referenced_ids="view1"
-            android:orientation="horizontal"
-            app:barrierDirection="bottom"
-            android:id="@+id/b1"/>
+
 
         <androidx.constraintlayout.widget.Guideline
             android:layout_width="wrap_content"
@@ -77,7 +71,7 @@
             app:layout_constraintLeft_toRightOf="@id/searchIcon"
             android:text="Search..."
             android:textColor="#C5C5C5"
-            android:textSize="18sp"
+            android:textSize="16sp"
             app:layout_constraintRight_toRightOf="@id/searchView"
             app:layout_constraintHorizontal_bias="0.05"/>
 
@@ -537,6 +531,7 @@
             android:textColor="#777777"
             android:textSize="14sp"
             android:elevation="2dp"
+            android:id="@+id/address2"
             android:layout_marginTop="2dp"/>
 
         <ImageView
@@ -549,6 +544,7 @@
             app:layout_constraintLeft_toLeftOf="@id/locateStudioView"
             app:layout_constraintHorizontal_bias="0.9"
             android:background="@drawable/ic_arrow"
+            android:id="@+id/storeLocationImg"
             android:backgroundTint="@color/colorPrimary"/>
 
         
