--- a/app/src/main/res/layout/servicelist_layout.xml
+++ b/app/src/main/res/layout/servicelist_layout.xml
@@ -7,7 +7,7 @@
     app:cardUseCompatPadding="true"
     android:layout_marginBottom="20dp"
     app:cardElevation="5dp"
-
+    android:id="@+id/serviceLayout"
     android:background="@color/white">
 
 
