--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -80,8 +80,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintRight_toRightOf="@id/gR"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toTopOf="@id/cartTxt"
+            app:layout_constraintBottom_toBottomOf="@id/cartTxt"
             android:text="Checkout"
             android:textAllCaps="true"
             android:textColor="@color/colorPrimary"
