--- a/app/src/main/res/layout/activity_referal.xml
+++ b/app/src/main/res/layout/activity_referal.xml
@@ -83,10 +83,12 @@
             app:layout_constraintBottom_toBottomOf="@id/view1"
             android:background="@null"
             android:hint="Enter referral code"
-            android:textSize="18sp"
+            android:textSize="14sp"
             android:gravity="center"
+            android:maxLength="15"
             android:id="@+id/edtReferralCode"
             android:fontFamily="@font/roboto"
+            android:textColor="#777777"
             android:textColorHint="#777777"/>
 
         <androidx.appcompat.widget.AppCompatButton
