--- a/app/src/main/res/layout/checkout_list_adapter.xml
+++ b/app/src/main/res/layout/checkout_list_adapter.xml
@@ -65,6 +65,7 @@
             app:layout_constraintBottom_toBottomOf="@id/amountTxt"
             app:layout_constraintRight_toLeftOf="@id/amountTxt"
             android:text="\u20B9 600"
+            android:visibility="invisible"
             android:layout_marginRight="20dp"
             android:textSize="14sp"
             android:textColor="#AAAAAA" />
@@ -82,7 +83,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:backgroundTint="#AAAAAA"
-
+            android:visibility="invisible"
             app:layout_constraintTop_toTopOf="@id/OriginalAmount"
             app:layout_constraintBottom_toBottomOf="@id/OriginalAmount"
             android:background="@drawable/ic_amount_cancel_stroke"
@@ -98,6 +99,7 @@
             android:hint="No. of individual"
             android:textColorHint="#777"
             android:textSize="12sp"
+            android:visibility="gone"
             android:textColor="#777"
             android:drawableEnd="@drawable/ic_baseline_arrow_drop_down_24"
             android:editable="false"
