--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,8 +10,9 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">#0DD3F1</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#293D58</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/colorPrimary</item>
         <!-- Customize your theme here. -->
+        <item name="android:navigationBarColor" tools:targetApi="lollipop">@color/white</item>
     </style>
 
     <style name="AppSearchView" parent="Widget.AppCompat.SearchView">
