--- a/app/src/main/res/layout/cart_layout.xml
+++ b/app/src/main/res/layout/cart_layout.xml
@@ -5,7 +5,6 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    app:cardUseCompatPadding="true"
     android:layout_marginBottom="16dp"
     app:cardElevation="5dp"
     android:id="@+id/cartLayout"
@@ -43,13 +42,25 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/discountAmount"
+            app:layout_constraintTop_toBottomOf="@id/discountAmount"
+            app:layout_constraintLeft_toLeftOf="@id/serviceNameTxt"
+            android:text="Individual - 4"
+            android:id="@+id/noOfIndividualText"
+            android:textColorHint="#777"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:textColor="#777"
+            />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/discountAmount"
             app:layout_constraintTop_toTopOf="@id/amountTxt"
             app:layout_constraintBottom_toBottomOf="@id/amountTxt"
             app:layout_constraintLeft_toLeftOf="@id/serviceNameTxt"
             android:text="\u20B9 100 OFF"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textColor="#00E994" />
 
         <TextView
