--- a/app/src/main/res/layout/checkout_list_adapter.xml
+++ b/app/src/main/res/layout/checkout_list_adapter.xml
@@ -36,13 +36,26 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/discountAmount"
+            app:layout_constraintLeft_toLeftOf="@id/serviceNameTxt"
+            android:text="Individual - 4"
+            android:id="@+id/noOfIndividualText"
+            android:textColorHint="#777"
+            android:textSize="14sp"
+            android:gravity="center"
+            android:textColor="#777"
+            />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:id="@+id/discountAmount"
 
             app:layout_constraintTop_toTopOf="@id/amountTxt"
             app:layout_constraintBottom_toBottomOf="@id/amountTxt"
             app:layout_constraintLeft_toLeftOf="@id/serviceNameTxt"
             android:text="\u20B9 100 OFF"
-            android:textSize="12sp"
+            android:textSize="14sp"
             android:textColor="#00E994" />
 
         <TextView
