--- a/app/src/main/res/layout/ongoing_service_layout.xml
+++ b/app/src/main/res/layout/ongoing_service_layout.xml
@@ -67,6 +67,7 @@
             app:layout_constraintRight_toLeftOf="@id/amountTxt"
             android:text="\u20B9 600"
             android:layout_marginRight="20dp"
+            android:visibility="invisible"
             android:textSize="14sp"
             android:textColor="#AAAAAA" />
 
@@ -83,7 +84,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:backgroundTint="#AAAAAA"
-
+            android:visibility="invisible"
             app:layout_constraintTop_toTopOf="@id/OriginalAmount"
             app:layout_constraintBottom_toBottomOf="@id/OriginalAmount"
             android:background="@drawable/ic_amount_cancel_stroke"
